# image-to-osm

./: LICENSE  README.md  pyproject.toml  requirements.txt  service.py  vercel.json
templates/: index.html
